--- a/check_go_work/android/app/src/main/AndroidManifest.xml
+++ b/check_go_work/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:icon="@mipmap/ic_launcher">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCfzszNnYnXnJ2ghlbIQOhOQajhHDSAhrs"/>
+            android:value="API Key"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
